# PregnancyGuardian

./: .gitignore  .replit  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_UPDATE.md  LOCAL_SETUP.md  NETLIFY_DEPLOYMENT.md  NETLIFY_DEPLOYMENT_READY.md  NETLIFY_FIX_GUIDE.md  RAG_IMPLEMENTATION.md  RAG_IMPLEMENTATION_STATUS.md  README.md  READme.md  SIMPLE_DEPLOYMENT.md  TEST_SCENARIOS.md  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  run.sh  start_app.py  start_services.py  vercel.json
attached_assets/: Pasted-Redefining-Pregnancy-Care-for-a-Healthier-Future-Intern-Task-Build-Deploy-a-Proactive-RAG-Agen-1750395108212_1750395108213.txt  Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-The-build-failu-1750336059463_1750336059472.txt
client/src/: App.tsx  index.css
client/src/components/: chat-modal.tsx  disclaimer.tsx  emergency-section.tsx  footer.tsx  header.tsx
client/src/lib/: types.ts
client/src/pages/: assessment.tsx  home.tsx  results.tsx
netlify/functions/: api.js  assessments.js  package.json  symptoms.js
server/: hf_rag_server.py  hf_rag_service.py  hf_server.py  huggingface_service.py  rag_server.py  rag_service.py  routes.ts  storage.ts
server/knowledge_base/: pregnancy_guidelines.txt  pregnancy_knowledge.txt
server/services/: openai.ts
shared/: schema.ts
